# sherry-networking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
implementation/client/: client.cpp  concrete_client.cpp  concrete_client.h
implementation/server/: concrete_multiconnection_server.cpp  concrete_multiconnection_server.h  multiconnection_server.cpp
interface/: client.h  multiconnection_server.h
test_package/: CMakeLists.txt  conanfile.py  networking_test.cpp
